--- a/Project.ipynb
+++ b/Project.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "70feacb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "train_folder = 'psychosis-classification-with-rsfmri/data/train'\n",
-    "test_folder = 'psychosis-classification-with-rsfmri/data/test'\n",
+    "train_folder = 'data/train'\n",
+    "test_folder = 'data/test'\n",
     "\n",
     "def convert_sample(path):\n",
     "    return np.load(os.path.join(path,'fnc.npy')), np.load(os.path.join(path,'icn_tc.npy'))\n",
@@ -51,29 +51,15 @@
     "        names.append(folder)\n",
     "        \n",
     "    return fnc_list, icn_tc_list, names\n",
-    "\n",
-    "# \"C:\\Users\\gusta\\OneDrive\\Documents\\År 4\\Advanced machine learning\\Project\\psychosis-classification-with-rsfmri\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b2e53d56",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] Det går inte att hitta sökvägen: 'psychosis-classification-with-rsfmri/data/train'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train_fnc, train_icn_tc, train_targets \u001b[38;5;241m=\u001b[39m \u001b[43mget_train_set\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m test_fnc, test_icn_tc, names \u001b[38;5;241m=\u001b[39m get_test_set()\n",
-      "Cell \u001b[1;32mIn[2], line 13\u001b[0m, in \u001b[0;36mget_train_set\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m icn_tc_list \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     12\u001b[0m targets \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m folder \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_folder\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(train_folder,folder)):\n\u001b[0;32m     15\u001b[0m         fnc, icn_tc \u001b[38;5;241m=\u001b[39m convert_sample(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(train_folder,folder,sample))\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Det går inte att hitta sökvägen: 'psychosis-classification-with-rsfmri/data/train'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_fnc, train_icn_tc, train_targets = get_train_set()\n",
     "test_fnc, test_icn_tc, names = get_test_set()"
@@ -81,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ad116075",
    "metadata": {},
    "outputs": [
@@ -98,10 +84,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2bbf056d890>"
+       "<matplotlib.image.AxesImage at 0x1bc878be2d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -139,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "bee45813",
    "metadata": {},
    "outputs": [
